--- a/MinerTech/MinerTech.Api/appsettings.Development.json
+++ b/MinerTech/MinerTech.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=MinerTech;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Database=MinerTech;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
