--- a/MinerTech/MinerTech.Api/appsettings.json
+++ b/MinerTech/MinerTech.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=MinerTech;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Database=MinerTech;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
