--- a/MinerTech/MinerTech.Application/MinerTech.Application.csproj
+++ b/MinerTech/MinerTech.Application/MinerTech.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,18 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="RestSharp" Version="110.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MinerTech.Domain\MinerTech.Domain.csproj" />
+    <ProjectReference Include="..\MinerTech.Infra.CrossCutting\MinerTech.Infra.CrossCutting.csproj" />
     <ProjectReference Include="..\MinerTech.Infra\MinerTech.Infra.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Validators\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
