--- a/MinerTech/MinerTech.Infra.CrossCutting/MinerTech.Infra.CrossCutting.csproj
+++ b/MinerTech/MinerTech.Infra.CrossCutting/MinerTech.Infra.CrossCutting.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="RestSharp" Version="110.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MinerTech.Domain\MinerTech.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
